# msrt

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  SPEC.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
architectures/: README.md  core.md  endpoint.md  engine.md  header-redesign.md  reliability.md  srt-core-design.md  srt-design.md  srt-frame-design.md  srt-reliability-design.md  srt-wire-design.md  stress-testing.md  wire.md
architectures/v1/: README.md  srt-core-design.md  srt-design.md  srt-engine-design.md  srt-hardening.md  srt-reliability-design.md  srt-reliable-transport-plan.md  srt-runtime-design.md  srt-stable-protocol-draft.md  srt-v1-spec.md  srt-wire-design.md
architectures/v2/: README.md  srt-engine-channel-v2-design.md  srt-v2-design.md  srt-v2-wire-format.md
benches/: README.md  poll.rs  protocol.rs
crates/srt/: Cargo.toml  README.md
crates/srt-core/: Cargo.toml  README.md
crates/srt-core/src/: flags.rs  frame.rs  id.rs  lib.rs  packet.rs  seq.rs
crates/srt-core/src/frame/: ack.rs  kind.rs  message.rs  ping.rs  reset_stream.rs  stream.rs
crates/srt-core/src/packet/: header.rs  kind.rs  payload.rs  ty.rs
crates/srt-core/src/packet/header/: flags.rs  seq.rs  stream_id.rs
crates/srt-engine/: Cargo.toml  README.md
crates/srt-engine/src/: config.rs  engine.rs  event.rs  layout.rs  lib.rs  link.rs  message.rs  receive.rs  scheduler.rs  send.rs
crates/srt-engine/src/engine/: ack.rs  inflight.rs  ingress.rs  outgoing.rs  packet.rs  queue.rs  reassembly.rs  retransmit.rs
crates/srt-error/: Cargo.toml  README.md
crates/srt-error/src/: lib.rs
crates/srt-frame/: Cargo.toml  README.md
crates/srt-frame/src/: codec.rs  crc.rs  frame.rs  lib.rs
crates/srt-frame/src/codec/: decoder.rs  encoder.rs  traits.rs
crates/srt-frame/src/codec/decoder/: buffer.rs  state.rs
crates/srt-frame/src/codec/encoder/: header.rs  packet.rs
crates/srt-reliability/: Cargo.toml  README.md
crates/srt-reliability/src/: ack.rs  dedup.rs  lib.rs  message.rs  packet.rs  policy.rs  retransmit.rs  timeout.rs  window.rs
crates/srt-reliability/src/message/: fragment.rs  status.rs
crates/srt-reliability/src/packet/: ack.rs  dedup.rs  event.rs  retransmit.rs  timeout.rs  window.rs
crates/srt-runtime/: Cargo.toml  README.md
crates/srt-runtime/src/: event.rs  lib.rs  link.rs  message.rs  runtime.rs  scheduler.rs  send.rs  time.rs
crates/srt-stream/: Cargo.toml  README.md
crates/srt-stream/src/: lib.rs
crates/srt-wire/: Cargo.toml  README.md
crates/srt-wire/src/: checksum.rs  codec.rs  envelope.rs  lib.rs
crates/srt-wire/src/checksum/: crc16.rs
crates/srt-wire/src/codec/: decoder.rs  encoder.rs  streaming.rs
crates/srt-wire/src/envelope/: flags.rs  header.rs  magic.rs
crates/srt/benches/: protocol.rs
crates/srt/src/: endpoint.rs  lib.rs
crates/srt/tests/: protocol_boundary.rs  reliable_simulation.rs
examples/: mcu.rs  std_client.rs  std_server.rs
scripts/: install-git-hooks.sh
src/: core.rs  endpoint.rs  engine.rs  error.rs  integrity.rs  lib.rs  reliability.rs  wire.rs
src/core/: ack.rs  frame.rs  message.rs  mod.rs  packet.rs
src/core/frame/: ack.rs  kind.rs  message.rs
src/core/packet/: body.rs  header.rs  number.rs  payload.rs  ty.rs
src/core/packet/header/: ack.rs  body.rs  data.rs  flags.rs  len.rs  liveness.rs  log.rs
src/endpoint/: client.rs  mod.rs  passive.rs  peer.rs  server.rs
src/engine/: config.rs  event.rs  ingress.rs  layout.rs  link.rs  machine.rs  message.rs  mod.rs  outgoing.rs  queue.rs  reassembly.rs  retransmit.rs  runtime.rs  scheduler.rs  state.rs  time.rs
src/engine/codec/: mod.rs  outgoing.rs  packet.rs
src/engine/codec/outgoing/: mod.rs
src/engine/codec/packet/: mod.rs
src/engine/machine/: ack.rs  inflight.rs  ingress.rs  outgoing.rs  packet.rs  queue.rs  reassembly.rs  retransmit.rs  tests.rs
src/engine/runtime/: ack.rs  ingress.rs  outgoing.rs  queue.rs  reassembly.rs
src/engine/state/: ack.rs  clock.rs  ingress.rs  message.rs  numbers.rs  reassembly.rs  recovery.rs  scheduler.rs  tests.rs
src/engine/state/ack/: mod.rs
src/engine/state/ingress/: mod.rs
src/engine/state/message/: mod.rs
src/engine/state/numbers/: mod.rs
src/engine/state/reassembly/: mod.rs
src/engine/state/receive/: mod.rs
src/engine/state/recovery/: inflight.rs  mod.rs  retransmit.rs
src/engine/state/scheduler/: event.rs  log.rs  mod.rs  poll.rs  queue.rs
src/integrity/: aead.rs  crc.rs  mod.rs  sip.rs
src/reliability/: mod.rs  packet.rs  policy.rs  recovery.rs
src/reliability/message/: fragment.rs
src/reliability/packet/: ack.rs  dedup.rs  event.rs  retransmit.rs  state.rs  timeout.rs  window.rs
src/reliability/recovery/: dynamic.rs
src/wire/: checksum.rs  codec.rs  envelope.rs  mod.rs  resync.rs
src/wire/codec/: decoder.rs  encoder.rs  streaming.rs
src/wire/envelope/: flags.rs  header.rs  magic.rs
tests/: ack_debug_loopback.rs  protocol_boundary.rs  reliable_simulation.rs
