[package]
name = "msrt"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Atlas Orein <gamesworldcraft@gamil.com>"]
repository = "https://github.com/atlas-orien/msrt"
documentation = "https://docs.rs/msrt"
readme = "README.md"
description = "Portable MSRT protocol implementation."
keywords = ["serial", "transport", "protocol", "no-std", "embedded"]
categories = ["embedded", "network-programming", "no-std"]
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "ROADMAP.md",
    "SPEC.md",
    "benches/**",
    "src/**",
    "tests/**",
]

[features]
default = ["std"]
std = ["dep:tracing"]

[dependencies]
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8" }

[[bench]]
name = "protocol"
harness = false
