[package]
name = "msrt"
version = "0.1.5"
edition = "2024"
license = "Apache-2.0"
authors = ["Atlas Orein <gamesworldcraft@gamil.com>"]
repository = "https://github.com/atlas-orien/msrt"
documentation = "https://docs.rs/msrt"
readme = "README.md"
description = "Portable MSRT protocol implementation."
keywords = ["serial", "transport", "protocol", "no-std", "embedded"]
categories = ["embedded", "network-programming", "no-std"]
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "ROADMAP.md",
    "SPEC.md",
    "benches/**",
    "src/**",
    "tests/**",
]

[features]
default = ["std"]
std = []
serial = ["std", "dep:serialport"]
dynamic-recovery = []

[dependencies]
serialport = { version = "4.9", optional = true }

[dev-dependencies]
criterion = { version = "0.8" }

[[bench]]
name = "protocol"
harness = false

[[bench]]
name = "poll"
harness = false

[[bin]]
name = "msrt-serial-frontend"
required-features = ["serial"]
