[package]
name = "srt-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core protocol primitives for Serial Realtime Transport."

[features]
default = []

[dependencies]
srt-error = { path = "../srt-error" }

[lints]
workspace = true
