[package]
name = "srt-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Protocol engine boundaries for Serial Realtime Transport."

[features]
default = []

[dependencies]
srt-core = { workspace = true }
srt-reliability = { workspace = true }
srt-wire = { workspace = true }

[lints]
workspace = true
