[package]
name = "srt-frame"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Frame encoder and decoder boundaries for Serial Realtime Transport."

[features]
default = []

[dependencies]
heapless.workspace = true
srt-core = { path = "../srt-core" }

[lints]
workspace = true
