[package]
name = "srt-reliability"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reliability boundaries for Serial Realtime Transport."

[features]
default = []

[dependencies]
srt-core = { workspace = true }

[lints]
workspace = true
