[package]
name = "srt-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Protocol runtime boundaries for Serial Realtime Transport."

[features]
default = []

[dependencies]
srt-core = { path = "../srt-core" }
srt-stream = { path = "../srt-stream" }

[lints]
workspace = true
