[package]
name = "srt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "No-std facade crate for the Serial Realtime Transport protocol."

[features]
default = []

[dependencies]
srt-core = { workspace = true }
srt-error = { workspace = true }
srt-reliability = { workspace = true }
srt-runtime = { workspace = true }
srt-wire = { workspace = true }

[lints]
workspace = true
